--- a/task06/html/index.html
+++ b/task06/html/index.html
@@ -18,6 +18,8 @@
     <div class="main-top clearfix">
         <div class="main-top-picture">
             <img src="../image/1.jpg" alt="">
+             <div class="cover-left"></div>
+            <div class="cover-right"></div>
         </div>
         <div class="sidebar">
             <h2>ABOUT</h2>
